# polytt

./: .gitignore  Makefile  README.md  dune-project  flake.nix  polytt.opam  polytt.opam.locked  shell.nix
.github/workflows/: build.yaml
doc/: design.md  rules.sty  rules.tex  verity.tex
emacs/: polytt-mode.el
examples/: fin.poly  lens.poly  prelude.poly
lib/: dune
lib/core/: CodeUnit.ml  CodeUnit.mli  Conversion.ml  Conversion.mli  Data.ml  Domain.ml  Global.ml  Global.mli  Ident.ml  Ident.mli  Precedence.ml  Quote.ml  Quote.mli  QuoteEnv.ml  Semantics.ml  Semantics.mli  Skolem.ml  Skolem.mli  Syntax.ml  TermBuilder.ml  dune
lib/elab/: Elaborator.ml  Elaborator.mli  Syntax.ml  dune
lib/errors/: Code.ml  Errors.ml  Errors.mli  dune
lib/loader/: Loader.ml  dune
lib/parser/: Grammar.mly  Lex.mll  dune
lib/refiner/: Eff.ml  Eff.mli  Tactic.ml  dune
lib/refiner/rules/: Coe.ml  Eq.ml  Eq.mli  FinSet.ml  FinSet.mli  Frown.ml  Frown.mli  Hole.ml  Hom.ml  Hom.mli  Nat.ml  Nat.mli  NegSigma.ml  NegSigma.mli  Pi.ml  Pi.mli  Poly.ml  Poly.mli  PolyHom.ml  PolyHom.mli  Prog.ml  Sigma.ml  Sigma.mli  Tensor.ml  Tensor.mli  Tri.ml  Tri.mli  Univ.ml  Univ.mli  Var.ml  Var.mli
lib/vernacular/: Driver.ml  Driver.mli  Eff.ml  Eff.mli  Syntax.ml  dune
std-lib/: Prelude.poly  Tutorial.poly
std-lib/Data/: Bool.poly  Either.poly  Natural.poly  Polynomial.poly  Records.poly  Unit.poly  Void.poly
std-lib/Data/Polynomial/: ADTs.poly  Examples.poly  Fin.poly  Identity.poly  Lens.poly  List.poly  Machines.poly  Maybe.poly  Store.poly  Vector.poly  WiringDiagrams.poly
stdlib/: Prelude.poly  polytt-lib
stdlib/Data/: Bool.poly  polytt-lib
test/: Test.ml  dune  polytt.ml  prelude.poly  std-lib  test.expected
test/basic/: basics.poly
test/hole/: eval.poly  let.poly  morph0.poly  morph1.poly  morph2.poly  morph3.poly  pos.poly
test/let/: test-let.poly
test/namespaces/: a.poly  b.poly  c.poly
