opam-version: "2.0"
synopsis: "A programming language for Polynomial Functors"
description: "TODO"
maintainer: ["Maintainer Name"]
authors: ["Topos Institute"]
license: "LICENSE"
tags: ["Polynomial Functors" "Programming Language" "Proof Assistant"]
homepage: "https://github.com/toposInstitute/polytt"
doc: "https://github.com/ToposInstitute/polytt/blob/main/README.md"
bug-reports: "https://github.com/toposInstitute/polytt/issues"
depends: [
  "ocaml"
  "dune" {>= "3.7"}
  "odoc" {with-doc}
  "algaeff" {>= "0.2"}
  "eio" {< "0.9"}
  "alcotest"
  "asai"
  "bantorra"
  "bwd" {>= "1.1"}
  "cmdliner" {>= "1.1"}
  "yuujinchou" {>= "4.0" & < "5.0"}
  "containers"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
pin-depends: [
  [ "asai.0.1.0~dev" "git+https://github.com/RedPRL/asai#4b0679bb051e9a820596d830d29dd74915521802" ]
  [ "bantorra.0.2.0~dev" "git+https://github.com/RedPRL/bantorra#ce619fbf8f87f24c5c93847af6721cfcdb7c85be" ]
]
dev-repo: "git+https://github.com/ToposInstitute/polytt.git"
