opam-version: "2.0"
synopsis: "A programming language for Polynomial Functors"
description: "TODO"
maintainer: ["Maintainer Name"]
authors: ["Topos Institute"]
license: "LICENSE"
tags: ["Polynomial Functors" "Programming Language" "Proof Assistant"]
homepage: "https://github.com/toposInstitute/polytt"
doc: "https://github.com/ToposInstitute/polytt/blob/main/README.md"
bug-reports: "https://github.com/toposInstitute/polytt/issues"
depends: [
  "ocaml"
  "dune" {>= "3.7"}
  "odoc" {with-doc}
  "algaeff" {>= "0.2"}
  "eio" {< "0.9"}
  "alcotest"
  "asai" {>= "0.1"}
  "bantorra"
  "bwd" {>= "1.1"}
  "cmdliner" {>= "1.1"}
  "yuujinchou" {>= "5.0"}
  "containers"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
pin-depends: [
  [ "bantorra.0.2.0~dev" "git+https://github.com/RedPRL/bantorra#e83d74b0e1318317bc1adc486191862fb6e8bfc8" ]
]
dev-repo: "git+https://github.com/ToposInstitute/polytt.git"
