(executables
 (names test)
 (libraries polytt.core polytt.loader))

(rule
 (target test.output)
 (deps
  (glob_files_rec ./*.poly)
  (glob_files_rec ./polytt-lib))
 (action (with-stdout-to %{target} (run ./test.exe))))

(rule
 (alias runtest)
 (action
  (diff test.expected test.output)))

(rule
 (alias test-display)
 (deps (universe))
 (action (cat test.output)))